<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ededed"
        android:padding="0dp"
        tools:context="io.github.introml.activityrecognition.MainActivity">

        <TableRow
            android:id="@+id/title_row"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:textAlignment="center"
            android:background="@android:color/holo_green_light">

            <TextView
                android:id="@+id/title"
                android:layout_weight="1"
                android:text="Human Activity Recognition"
                android:textAlignment="center"
                android:textSize="20sp"
                android:textStyle="bold"
                android:fontFamily="sans-serif-medium"
                />


        </TableRow>

        <TextView
            android:id="@+id/current_activity_title"
            android:layout_height="73dp"
            android:layout_weight="1"
            android:text="Current activity:"
            android:gravity="center"
            android:textSize="30sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/current_activity_image"
            android:layout_width="wrap_content"
            android:layout_height="193dp"
            />


        <TableRow
            android:id="@+id/downstairs_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/downstairs_title"
                android:layout_gravity="center"
                android:text="@string/downstairs"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/downstairs_prob"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/jogging_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/jogging_title"
                android:layout_gravity="center"
                android:text="@string/jogging"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/jogging_prob"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/sitting_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/sitting_title"
                android:layout_gravity="center"
                android:text="@string/sitting"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/sitting_prob"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/standing_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/standing_title"
                android:layout_gravity="center"
                android:text="@string/standing"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/standing_prob"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/upstairs_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/upstairs_title"
                android:layout_gravity="center"
                android:text="@string/upstairs"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/upstairs_prob"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/walking_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/walking_title"
                android:layout_gravity="center"
                android:text="@string/walking"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/walking_prob"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>

        <TableRow
            android:id="@+id/biking_row"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:padding="20dp">

            <TextView
                android:id="@+id/biking_title"
                android:layout_gravity="center"
                android:text="@string/biking"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                android:layout_marginLeft="-20dp"/>

            <TextView
                android:id="@+id/biking_prob" 
                android:layout_gravity="center"
                android:textAlignment="center"
                android:textSize="18sp" />
        </TableRow>


    </TableLayout>



</ScrollView>